# 3D-Scene

./: Návrh_projektu.docx  README.md  project.cpp
project/: CMakeLists.txt
project/cmake/: FindASSIMP.cmake  bin2c.cmake
project/dependencies/lib/vc2015/: libassimp.lib
project/ppgso/: Mesh_Assimp.cpp  Mesh_Assimp.h  Mesh_Tiny.cpp  Mesh_Tiny.h  image.h  ppgso.h
project/src/gl9_scene/: PostProcess.cpp  PostProcess.h  animation.h  bloom_shader.fs  bloom_shader.vs  blur_shader.fs  blur_shader.vs  camera.cpp  camera.h  cameraKeyFrame.h  main.cpp  particleShaders.h  particleSystem.cpp  particleSystem.h  rigid.h  skybox.fs  skybox.vs  t_object.cpp  t_object.h
